--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						</form>
 				</div>
     </header>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script>
 			const searchFormToggler = $('.search-form__toggler');
 			const searchForm = $('form[name="search-form"]');
